--- a/ChangeLog/0/0/0.md
+++ b/ChangeLog/0/0/0.md
@@ -1,9 +1,12 @@
-# 1
+# 1 2026-1-5
 1+| 加载图片，并描点。
 
-# 2
+# 2 2026-1-8
 +| 加载并显示图片。
 -| ^1.1^
 
-# 3
+# 3 2026-1-8
 +| 通过选择文件对话框选择图片
+
+# 4 2026-1-9
+%| 调整界面控件布局
